fix: resolve all Android/BrowserStack Appium 3.x failures and Mockito parallel contamination
Co-authored-by: MohabMohie <19201898+MohabMohie@users.noreply.github.com>